--- a/kooplexhub/hub/templates/footer.html
+++ b/kooplexhub/hub/templates/footer.html
@@ -1,5 +1,7 @@
 <div class="jumbotron bs-docs-footer" style="font-size: 14px; padding-top: 20px; padding-bottom: 20px; color: #99979c; background-color: #2a2730; box-shadow: 5px 10px 8px #888888;">
-  <p><span style="color: #f57a7a;">"The sooner you call for help, the sooner it arrives!"</span> - <a href="mailto:kooplex@complex.elte.hu"><strong>kooplex at complex.elte.hu.</strong></a></p>
+	<p> <strong><span style="color:red">Important!</span></strong> This is an educational instance of kooplex, therefore it is not suitable to run or store anything that is not necessary to complete the course. Therefore, please, <span style="color:red">stop your container</span> by clicking on the X sign <span style="color:red">when you are not using it</span>! Thank you!
+	</p>
+	<p><span style="color: #f57a7a;">"The sooner you call for help, the sooner it arrives!"</span> - <a href="mailto:kooplex@complex.elte.hu"><strong>kooplex at complex.elte.hu.</strong></a></p>
   <ul>
     <li>To report problems or buggy features please file an issue at - <a href="https://github.com/kooplex/kooplex-hub" target="_blank" style="color: #99979c"><strong>https://github.com/kooplex/kooplex-hub</strong></a></li>
     <li>To check the manual please visit - <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank" style="color: #99979c"><strong>https://github.com/kooplex/kooplex-hub/wiki</strong></a></li>
