--- a/kooplexhub/hub/templates/edu/pane-feedback.html
+++ b/kooplexhub/hub/templates/edu/pane-feedback.html
@@ -1,8 +1,38 @@
-<form id="assignments-feedbackform-{{ course.id }}" class="form-horizontal" action="{% url 'assignment:feedback' %}" method="post">
+<div style="text-align:center;margin:10px;">
+    <!--div style="margin-top:10px;" class="alert alert-warning">Assign corrector - Give feedback - Reassign tasks.</div-->
+<div  class="alert alert-warning">
+<form id="assignments-feedbackform-search-{{ course.id }}" class="form-inline" style="display:block;" action="{% url 'assignment:search' %}" method="post">
+  {% csrf_token %}
+  {% if course.lookup_userassignmentbindings %}
+    <!--input type="text" class="form-control" id="keres" name="keres" placeholder="what are you searching for?"-->
+    <input type="text" class="form-control" id="keres" name="user" placeholder="student's name">
+    <input type="text" class="form-control" id="keres" name="name" placeholder="assignment name">
+    <select id="holkeres" style="margin-left:5px;margin-right:5px;" class="form-control" name="state">
+	<option value="">  assignment's state  </option>
+    {% for stkey, stval in states.items %}
+	<option value="{{ stkey }}">{{ stval }}</option>
+    {% endfor %}
+    </select>
+    <!--select id="holkeres" style="margin-left:5px;margin-right:5px;" class="form-control" name="holkeres">
+    	<option value="user">user</option>
+    	<option value="assignment">assignment</option>
+    	<option value="state">state</option>
+    </select-->
+    <button type="submit" class="btn btn-primary">Search</button>
+    <input type="hidden" name="pager" value="{{ pager }}">
+    <input type="hidden" name="course_id" value="{{ course.id }}">
+    <input type="hidden" name="tabla" value="feedback">
+  {% endif %}
+</form>
+</div>
+</div>
+
+<form id="assignments-feedbackform-{{ course.id }}" class="form-horizontal" action="{% url 'assignment:feedback' course.id %}" method="post">
   {% csrf_token %}
   {% load render_table from django_tables2 %}
   {% if course.lookup_userassignmentbindings %}
-    <div class="alert alert-warning">Select user assignments you finished correcting.</div>
+    <input type="hidden" name="pager" value="{{ pager }}">
+	
     {% render_table t_feedback %}
     <div class="modal-footer">
       <button type="submit" class="btn btn-default" name="button" value="apply"> Apply</button>
