--- a/kooplexhub/hub/templates/container/stopremove.html
+++ b/kooplexhub/hub/templates/container/stopremove.html
@@ -2,9 +2,15 @@
   {% if container.is_running %}
      <a href="{% url 'container:stop' container.id next_page %}" role="button" class="btn btn-danger" style="padding: 3px 6px 6px 6px; float: right;">
        <span class="oi oi-x" aria-hidden="true"></span></a>
-  {% else %}
+  {% elif container.is_stopped %}
      <a href="{% url 'container:remove' container.id next_page %}" role="button" class="btn btn-danger" style="padding: 3px 6px 6px 6px; float: right;">
        <span class="oi oi-fire" aria-hidden="true"></span></a>
+  {% elif next_page == "project:list" %}
+     <a href="#" role="button" class="btn btn-default disabled" style="padding: 3px 6px 6px 6px; float: right;">
+       <span class="oi oi-x" aria-hidden="true"></span></a>
+  {% else %}
+     <a href="{% url 'container:remove' container.id next_page %}" role="button" class="btn btn-danger" style="padding: 3px 6px 6px 6px; float: right;">
+       <span class="oi oi-trash" aria-hidden="true"></span></a>
   {% endif %}
 {% else %}
      <a href="#" role="button" class="btn btn-default disabled" style="padding: 3px 6px 6px 6px; float: right;">
