--- a/kooplexhub/hub/templates/navbarmenu_right.html
+++ b/kooplexhub/hub/templates/navbarmenu_right.html
@@ -5,17 +5,16 @@
 
 <ul class="navbar-nav navbar-right">
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProfile" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     {% if user.is_authenticated %}
       Hello {{ user.first_name }}!
     {% else %}
       Help
     {% endif %}
     </a>
-    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <div class="dropdown-menu" aria-labelledby="navbarDropdownProfile">
     {% if user.is_authenticated %}
       <a class="dropdown-item" href="#" data-toggle="modal" data-target="#update-bio">Update bio</a>
-      <a class="dropdown-item" href="{% url 'project:manage' %}">Manage projects</a>
       <a class="dropdown-item" href="{% url 'user:changetoken' %}">Change token</a>
       <div class="dropdown-divider"></div>
     {% endif %}
@@ -27,7 +26,7 @@
   {% if user.is_authenticated %}
     <a class="nav-link" href="{% url 'logout' %}">Log off <span class="oi oi-account-logout"></span></a>
   {% else %}
-    <a class="nav-link" href="{% url 'social:begin' 'elteoidc' %}">Log in <span class="oi oi-account-login"></span></a>
+    <a class="nav-link" href="{% url 'social:begin' 'hydraoidc' %}">Log in <span class="oi oi-account-login"></span></a>
   {% endif %}
   </li>
 </ul>
