--- a/kooplexhub/hub/templates/project/manage.html
+++ b/kooplexhub/hub/templates/project/manage.html
@@ -3,44 +3,32 @@
 
 {% block content %}
 <div class="row">
-  <form id="project-manage" class="form-horizontal" action="{% url 'project:manage' %}" method="post">
+  <form id="project-manage" class="form-horizontal" action="{% url 'project:showhide' next_page %}" method="post">
     {% csrf_token %}
-    <h4>Manage your projects' visibility</h4>
+    <h4>Show or hide your projects</h4>
     <ul class="nav nav-tabs" id="myProjectTabs" role="tablist">
       <li class="nav-item">
-      {% if user.profile.is_teacher %}
         <a id="course-tab" class="nav-link active" href="#pane_course" data-toggle="tab">Teaching</a>
-      {% else %}
-        <a id="course-tab" class="nav-link disabled" href="#">Teaching</a>
-      {% endif %}
       </li>
       <li class="nav-item">
-      {% if user.profile.can_createproject %}
-       {% if user.profile.is_teacher %}
         <a id="project-tab" class="nav-link" href="#pane_project" data-toggle="tab">Projects</a>
-       {% else %}
-        <a id="project-tab" class="nav-link active" href="#pane_project" data-toggle="tab">Projects</a>
-       {% endif %}
-      {% else %}
-        <a id="project-tab" class="nav-link disabled" href="#">Projects</a>
-      {% endif %}
       </li>
     </ul>
     <div class="tab-content" id="myHideTabContent">
-    {% if user.profile.is_teacher %}
       <div id="pane_course" class="tab-pane fade show active" role="tabpanel" aria-labelledby="course-tab">
-        {% render_table t_course %}
+        {% if t_course.data|length > 0 %}
+          {% render_table t_course %}
+        {% else %}
+          <p> You do not have any course projects to hide or show.
+        {% endif %}
       </div>
-    {% endif %}
-    {% if user.profile.can_createproject %}
-     {% if user.profile.is_teacher %}
-      <div id="pane_project" class="tab-pane fade show active" role="tabpanel" aria-labelledby="project-tab">
-     {% else %}
       <div id="pane_project" class="tab-pane fade" role="tabpanel" aria-labelledby="project-tab">
-     {% endif %}
-       {% render_table t_project %}
+        {% if t_project.data|length > 0 %}
+          {% render_table t_project %}
+        {% else %}
+          <p> You do not have any projects to hid or show.
+        {% endif %}
       </div>
-    {% endif %}
     </div>   <!-- tab-content -->
         <div class="modal-footer">
           <button type="submit" class="btn btn-default" name="button" value="apply"> Apply settings</button>
