project owner deprecated project settings button added project del/leave new container fix

--- a/kooplexhub/hub/templates/project/pane-description.html
+++ b/kooplexhub/hub/templates/project/pane-description.html
@@ -1,4 +1,4 @@
 
-<label for="description">Describe the course</label><br>
+<label for="description">Describe this project</label><br>
 <textarea rows="6" cols="50" id="description" name="description">{{ project.description }}</textarea>
 
