--- a/kooplexhub/hub/templates/container/manage.html
+++ b/kooplexhub/hub/templates/container/manage.html
@@ -7,7 +7,16 @@
   <form id="container-manage" class="form-horizontal" action="{% url 'container:addproject' container.id %}" method="post">
     {% csrf_token %}
     <h4>Manage container projects</h4>
-    <p>The image of this environment is: {{ container.image }}. Select those projects that should be available in this container environment.</p>
+    <p>The image of this environment is: 
+      <select name="container_image_id">
+        {% for image in images %}
+          {% if image.present %}
+            <option value="{{ image.id }}" {% if container.image == image %} selected {% endif %}>{{ image }}</option>
+          {% endif %}
+        {% endfor %}
+      </select>
+    </p>
+    <p>Select those projects that should be available in this container environment.</p>
     {% render_table t_projects %}
     <div class="modal-footer">
       <button type="submit" class="btn btn-default" name="button" value="apply"> Apply settings</button>
