--- a/kooplexhub/hub/templates/menuitem_project.html
+++ b/kooplexhub/hub/templates/menuitem_project.html
@@ -12,7 +12,7 @@
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProject" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdownProject">
       <a class="dropdown-item" href="#" data-toggle="modal" data-target="#project-new">New project</a>
-      <a class="dropdown-item" href="#">Join a project</a>
+      <a class="dropdown-item" href="{% url 'project:join' %}">Join a project</a>
       <a class="dropdown-item" href="{% url 'project:list' %}">List projects</a>
       <a class="dropdown-item" href="{% url 'project:showhide' 'project:list' %}">Show/hide projects</a>
     </div>
