submenu for project configuration

--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -22,6 +22,7 @@
     <div class="container body-content">
       {% block content %}{% endblock %}
     </div>
+    {% include 'footer.html' %}
     <hr/>
     <footer>
       <p>&copy; 2018 - Kooplex Hub</p>
