--- a/kooplexhub/hub/templates/project/pane-description.html
+++ b/kooplexhub/hub/templates/project/pane-description.html
@@ -1,4 +1,12 @@
 
-<label for="description">Describe this project</label><br>
+<label for="description">Describe project</label><br>
 <textarea rows="6" cols="50" id="description" name="description">{{ project.description }}</textarea>
 
+<p>The current scope for project {{ project.name }} is <strong>{{ project.scope }}</strong>.</p>
+
+<label>Your choice for the new scope:</label>
+<select id="project_scopes-{{ project.id }}" name="project_scope">
+  {% for scope in project.SCOPE_LIST %}
+    <option value="{{ scope }}" {% if project.scope == scope %} selected {% endif %}>{{ scope }}</option>
+  {% endfor %}
+</select>
