--- a/kooplexhub/hub/templates/project/pane-image.html
+++ b/kooplexhub/hub/templates/project/pane-image.html
@@ -1,3 +1,5 @@
+{% load render_table from django_tables2 %}
+
 <p>The current image for project {{ project.name }} is <strong>{{ project.image }}</strong>.</p>
 
 <label>Your choice for the new image:</label>
@@ -12,3 +14,7 @@
 {% if project.is_running %}
 <div class="alert alert-warning" role="alert">This project {{ project }} is running. If you decide to change the image. Do not forget to restart the project container to take effect.</div>
 {% endif %}
+
+
+<p>Functional volumes</p>
+{% render_table t_volumes_fun %}
