--- a/kooplexhub/hub/templates/container/list.html
+++ b/kooplexhub/hub/templates/container/list.html
@@ -1,10 +1,14 @@
 {% extends "layout.html" %}
 
-{% block content %}
+{% block submenu %}
+<div class="navbar navbar-expand-lg navbar-light bg-light">
+  <h5><span class="badge badge-secondary">The list of your containers</span></h5>
+</div>
+{% endblock %}
 
+{% block content %}
   {% for container in user.profile.containers %}
      {% include 'container/partial.html' %}
   {% endfor %}
-
 {% endblock %}
 
