--- a/kooplexhub/hub/templates/project/list.html
+++ b/kooplexhub/hub/templates/project/list.html
@@ -1,7 +1,12 @@
 {% extends "layout.html" %}
 
-{% block content %}
+{% block submenu %}
+<div class="navbar navbar-expand-lg navbar-light bg-light">
+  <h5><span class="badge badge-secondary">The list of your projects</span></h5>
+</div>
+{% endblock %}
 
+{% block content %}
   {% for binding in user.profile.projectbindings %}
     {% if not binding.is_hidden %}
       {% with project=binding.project %}
