active menu item clone script fix (needs to check is ssh-agent is running, needs to know which key to use)

--- a/kooplexhub/hub/templates/menuitem_container.html
+++ b/kooplexhub/hub/templates/menuitem_container.html
@@ -1,4 +1,4 @@
-  <li class="nav-item">
+  <li class="nav-item {{ active }}">
     {% if user.profile.containers %}
       <a href="{% url 'container:list' %}" class="nav-link" data-toggle="tooltip" title="List and manage your containers" data-placement="bottom">Containers</a>
     {% else %}
