--- a/kooplexhub/hub/templates/menuitem_edu.html
+++ b/kooplexhub/hub/templates/menuitem_edu.html
@@ -1,5 +1,5 @@
 {% if user.profile.is_student and user.profile.is_teacher %}
-  <li class="nav-item dropdown">
+  <li class="nav-item dropdown {{ active }}">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownEdu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Education</a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdownEdu">
       <a class="dropdown-item" href="{% url 'list:teaching' %}">Teaching</a>
