--- a/kooplexhub/hub/templates/menuitem_report.html
+++ b/kooplexhub/hub/templates/menuitem_report.html
@@ -1,4 +1,4 @@
-  <li class="nav-item">
+  <li class="nav-item {{ active }}">
     {% if user.profile.reports %}
       <a href="#" class="nav-link" data-toggle="tooltip" title="List and manage your reports" data-placement="bottom">Reports</a>
     {% else %}
