vcp management fix

--- a/kooplexhub/hub/templates/index.html
+++ b/kooplexhub/hub/templates/index.html
@@ -1,5 +1,32 @@
 {% extends "layout.html" %}
 
+{% block header_extra %}
+<link
+    href="https://cdn.pydata.org/bokeh/release/bokeh-1.0.4.min.css"
+    rel="stylesheet" type="text/css">
+<link
+    href="https://cdn.pydata.org/bokeh/release/bokeh-widgets-1.0.4.min.css"
+    rel="stylesheet" type="text/css">
+<link
+    href="https://cdn.pydata.org/bokeh/release/bokeh-tables-1.0.4.min.css"
+    rel="stylesheet" type="text/css">
+
+<script src="https://cdn.pydata.org/bokeh/release/bokeh-1.0.4.min.js"></script>
+<script src="https://cdn.pydata.org/bokeh/release/bokeh-widgets-1.0.4.min.js"></script>
+<script src="https://cdn.pydata.org/bokeh/release/bokeh-tables-1.0.4.min.js"></script>
+<script>
+//fetch('https://kooplex.vo.elte.hu/stats/hourly')
+//        .then(function(response) { return response.json(); })
+//    .then(function(item) { Bokeh.embed.embed_item(item); })
+//fetch('https://kooplex-fiek.elte.hu/wtat/stats/kep')
+//        .then(function(response) { return response.json(); })
+//    .then(function(item) { Bokeh.embed.embed_item(item); })
+fetch('https://kooplex.vo.elte.hu/stats/tourly')
+        .then(function(response) { return response.json(); })
+    .then(function(item) { Bokeh.embed.embed_item(item); })
+</script>
+{% endblock %}
+
 {% block content %}
 
 <div class="jumbotron" style="box-shadow: 5px 10px 8px #888888; padding: 10px;">
@@ -9,6 +36,9 @@
     </div>
   </div>
 </div>
+
+<h2> CPU Usage of Kooplex.vo </h2>
+<div id="myplot4"> </div>
 
 <div class="jumbotron" style="padding-top: 10px; padding-bottom: 10px; background-color: #bdbdbd; box-shadow: 5px 10px 8px #888888;">
   <div class="row">
