--- a/kooplexhub/hub/templates/container/manage.html
+++ b/kooplexhub/hub/templates/container/manage.html
@@ -2,11 +2,16 @@
 
 {% load render_table from django_tables2 %}
 
+{% block submenu %}
+<div class="navbar navbar-expand-lg navbar-light bg-light">
+  <h5><span class="badge badge-secondary">Add and remove projects to {{ container.name }}</span></h5>
+</div>
+{% endblock %}
+
 {% block content %}
 <div class="row">
   <form id="container-manage" class="form-horizontal" action="{% url 'container:addproject' container.id %}" method="post">
     {% csrf_token %}
-    <h4>Manage container projects</h4>
     <p>The image of this environment is: 
       <select name="container_image_id">
         {% for image in images %}
