--- a/kooplexhub/hub/templates/project/manage.html
+++ b/kooplexhub/hub/templates/project/manage.html
@@ -11,34 +11,16 @@
 <div class="row">
   <form id="project-manage" class="form-horizontal" action="{% url 'project:showhide' next_page %}" method="post">
     {% csrf_token %}
-    <ul class="nav nav-tabs" id="myProjectTabs" role="tablist">
-      <li class="nav-item">
-        <a id="course-tab" class="nav-link active" href="#pane_course" data-toggle="tab">Teaching</a>
-      </li>
-      <li class="nav-item">
-        <a id="project-tab" class="nav-link" href="#pane_project" data-toggle="tab">Projects</a>
-      </li>
-    </ul>
-    <div class="tab-content" id="myHideTabContent">
-      <div id="pane_course" class="tab-pane fade show active" role="tabpanel" aria-labelledby="course-tab">
-        {% if t_course.data|length > 0 %}
-          {% render_table t_course %}
-        {% else %}
-          <p> You do not have any course projects to hide or show.
-        {% endif %}
-      </div>
-      <div id="pane_project" class="tab-pane fade" role="tabpanel" aria-labelledby="project-tab">
-        {% if t_project.data|length > 0 %}
-          {% render_table t_project %}
-        {% else %}
-          <p> You do not have any projects to hid or show.
-        {% endif %}
-      </div>
-    </div>   <!-- tab-content -->
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-default" name="button" value="apply"> Apply settings</button>
-          <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-        </div>
+    <p>Tick the checkbox next to the project you want to hide.</p>
+    {% if t_project.data|length > 0 %}
+      {% render_table t_project %}
+    {% else %}
+      <p> You do not have any projects to hide or show.
+    {% endif %}
+    <div class="modal-footer">
+      <button type="submit" class="btn btn-default" name="button" value="apply"> Apply settings</button>
+      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+    </div>
   </form>
 </div> <!-- container -->
 {% endblock %}
