can search repo, can order repo

--- a/kooplexhub/hub/templates/project/conf-versioncontrol.html
+++ b/kooplexhub/hub/templates/project/conf-versioncontrol.html
@@ -10,7 +10,7 @@
 
   <p>Bind version control repositories to this project</p>
   <div  class="alert alert-warning">
-    <input type="text" name="repository" placeholder="repository">
+    <input type="text" name="repository" placeholder="repository" value="{{ search_repository }}">
     <button type="submit" class="btn btn-primary" name="button" value="search">Search</button>
     <input type="hidden" name="pager" value="{{ pager }}">
   </div>
