--- a/kooplexhub/hub/templates/container/stopremove.html
+++ b/kooplexhub/hub/templates/container/stopremove.html
@@ -5,15 +5,15 @@
   {% elif container.is_stopped %}
      <a href="{% url 'container:remove' container.id next_page %}" role="button" class="btn btn-danger" style="padding: 3px 6px 6px 6px; float: right;">
        <span class="oi oi-fire" aria-hidden="true"></span></a>
-  {% elif next_page == "project:list" %}
-     <a href="#" role="button" class="btn btn-default disabled" style="padding: 3px 6px 6px 6px; float: right;">
-       <span class="oi oi-x" aria-hidden="true"></span></a>
-  {% else %}
+  {% elif container.is_created %}
      <a href="{% url 'container:destroy' container.id next_page %}" role="button" class="btn btn-danger" style="padding: 3px 6px 6px 6px; float: right;">
        <span class="oi oi-trash" aria-hidden="true"></span></a>
+  {% else %}
+     <a href="#" role="button" class="btn btn-default disabled" style="padding: 3px 6px 6px 6px; float: right;">
+       <span class="oi oi-link-broken" aria-hidden="true"></span></a>
   {% endif %}
 {% else %}
      <a href="#" role="button" class="btn btn-default disabled" style="padding: 3px 6px 6px 6px; float: right;">
-       <span class="oi oi-x" aria-hidden="true"></span></a>
+       <span class="oi oi-link-broken" aria-hidden="true"></span></a>
 {% endif %}
 
