--- a/kooplexhub/hub/templates/container/startopen.html
+++ b/kooplexhub/hub/templates/container/startopen.html
@@ -5,8 +5,12 @@
 <a
   {% if container %}
   href="{% url 'container:start' container.id next_page %}"
-  {% else %}
+  {% elif project %}
   href="{% url 'container:startprojectcontainer' project.id next_page %}"
+  {% elif course %}
+  href="{% url 'container:startcoursecontainer' course.id next_page %}"
+  {% else %}
+  href="#"
   {% endif %}
   role="button" class="btn btn-outline-secondary" style="min-width: 6em; text-align: left;">
     <span class="oi oi-flash" aria-hidden="true"> Start</span></a>
