--- a/kooplexhub/hub/templates/edu/courses.html
+++ b/kooplexhub/hub/templates/edu/courses.html
@@ -1,14 +1,16 @@
 {% extends "layout.html" %}
 
+{% block submenu %}
+<div class="navbar navbar-expand-lg navbar-light bg-light">
+  <h5><span class="badge badge-secondary">The list of courses you attend</span></h5>
+</div>
+{% endblock %}
+
 {% block content %}
 
-  {% include 'edu/assignment_submission.html' %}
-
-  {% for project in user.profile.courseprojects_attended %}
-    {% if not project|is_hiddenbyuser:user %}
-       {% include 'project/partial.html' with container=project|get_usercontainer:user caller='student' next_page='list:courses' %}
-    {% endif %}
+  {% for course in user.profile.courses_attend %}
+     {% include 'edu/partial.html' with container=course|get_usercoursecontainer:user %}
   {% endfor %}
-{% include "../footer.html" %}
+
 {% endblock %}
 
