--- a/kooplexhub/hub/templates/edu/teaching.html
+++ b/kooplexhub/hub/templates/edu/teaching.html
@@ -1,12 +1,16 @@
 {% extends "layout.html" %}
 
+{% block submenu %}
+<div class="navbar navbar-expand-lg navbar-light bg-light">
+  <h5><span class="badge badge-secondary">The list of courses you teach</span></h5>
+</div>
+{% endblock %}
+
 {% block content %}
 
-  {% for project in user.profile.courseprojects_taught %}
-    {% if not project|is_hiddenbyuser:user %}
-         {% include 'project/partial.html' with container=project|get_usercontainer:user caller='teacher' next_page='list:teaching' %}
-    {% endif %}
+  {% for course in user.profile.courses_taught %}
+     {% include 'edu/partial.html' with container=course|get_usercoursecontainer:user %}
   {% endfor %}
-{% include "../footer.html" %}
+
 {% endblock %}
 
