--- a/kooplexhub/hub/templates/menuitem_edu.html
+++ b/kooplexhub/hub/templates/menuitem_edu.html
@@ -2,17 +2,17 @@
   <li class="nav-item dropdown {{ active }}">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownEdu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Education</a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdownEdu">
-      <a class="dropdown-item" href="{% url 'list:teaching' %}">Teaching</a>
-      <a class="dropdown-item" href="{% url 'list:course' %}">Courses</a>
+      <a class="dropdown-item" href="{% url 'education:teaching' %}">Teaching</a>
+      <a class="dropdown-item" href="{% url 'education:course' %}">Courses</a>
     </div>
   </li>
 {% elif user.profile.is_student %}
-  <li class="nav-item">
-    <a href="{% url 'list:courses' %}" class="nav-link" data-toggle="tooltip" title="Access notebook environments related to those courses you attend this semester" data-placement="bottom">Courses</a>
+  <li class="nav-item {{ active }}">
+    <a href="{% url 'education:courses' %}" class="nav-link" data-toggle="tooltip" title="Access notebook environments related to those courses you attend this semester" data-placement="bottom">Courses</a>
   </li>
 {% elif user.profile.is_teacher %}
-  <li class="nav-item">
-    <a href="{% url 'list:teaching' %}" class="nav-link" data-toggle="tooltip" title="Access notebook environments related to those courses you teach this semester" data-placement="bottom">Teaching</a>
+  <li class="nav-item {{ active }}">
+    <a href="{% url 'education:teaching' %}" class="nav-link" data-toggle="tooltip" title="Access notebook environments related to those courses you teach this semester" data-placement="bottom">Teaching</a>
   </li>
 {% else %}
   <li class="nav-item">
