--- a/kooplexhub/hub/templates/navbar.html
+++ b/kooplexhub/hub/templates/navbar.html
@@ -11,7 +11,7 @@
     {% if user.is_authenticated %}
       {% include "menuitem_project.html" with active=menu_project %}
       {% include "menuitem_report.html" with active=menu_report %}
-      {% include "menuitem_edu.html" with active=menu_edu %}
+      {% include "menuitem_edu.html" with active=menu_teaching %}
       {% include "menuitem_container.html" with active=menu_container %}
      <li><span class="badge badge-secondary"><a href="#" id="navstat" class="nav-link" style="color: white"> CPU usage: 0 % &mdash; Memory usage: 0 MB </a></span>
 
